manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "rsongtrialaks-2bd3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "rsongtrialaks-2bd3"
  template:
    metadata:
      labels:
        app: "rsongtrialaks-2bd3"
    spec:
      containers:
        - name: "rsongtrialaks-2bd3"
          image: "rsongtrialowneracr01.azurecr.io/rsongtrialaks"
          ports:
          - containerPort: 80
